Fix tools on small screen sizes

--- a/style.css
+++ b/style.css
@@ -186,6 +186,7 @@ footer {
 
 #verbTool {
     display: flex;
+    flex-wrap: wrap;
 }
 
 #verbTool > :not(:last-child) {
@@ -193,6 +194,7 @@ footer {
 }
 
 #verbTool > .toolTextOutput {
-    width: 0;
+    margin-top: 16px;
+    width: 250px;
     flex-grow: 1;
 }
